--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -556,4 +556,149 @@ a {
   -ms-grid-column-span: 1;
   grid-column: 3/4;
 }
+
+#footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  .landingsection {
+    height: auto;
+    -ms-grid-columns: 90%;
+        grid-template-columns: 90%;
+    -ms-grid-rows: 30% 70%;
+        grid-template-rows: 30% 70%;
+    padding: 20px 0;
+  }
+  .landingsection img {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+  }
+  #game {
+    height: auto;
+    -ms-grid-columns: 90%;
+        grid-template-columns: 90%;
+    -ms-grid-rows: 10% 40% 50%;
+        grid-template-rows: 10% 40% 50%;
+    padding: 30px 0;
+    grid-gap: 5px;
+    margin: auto;
+  }
+  .game-small-icon {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .game-text {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    padding: 0;
+  }
+  #game-two {
+    height: auto;
+    -ms-grid-columns: 70%;
+        grid-template-columns: 70%;
+    -ms-grid-rows: 10% 40% 50%;
+        grid-template-rows: 10% 40% 50%;
+    padding: 30px 0;
+    grid-gap: 5px;
+    margin: auto;
+    width: 100%;
+    justify-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .game-small-icon-two {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .game-text-two {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    padding: 0;
+  }
+  .game-image-two {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  #game-three {
+    height: auto;
+    -ms-grid-columns: 90%;
+        grid-template-columns: 90%;
+    -ms-grid-rows: 10% 40% 50%;
+        grid-template-rows: 10% 40% 50%;
+    padding: 30px 0;
+    grid-gap: 5px;
+    margin: auto;
+  }
+  .game-small-icon-three {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .game-text-three {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    padding: 0;
+  }
+  #game-four {
+    height: auto;
+    -ms-grid-columns: 70%;
+        grid-template-columns: 70%;
+    -ms-grid-rows: 10% 40% 50%;
+        grid-template-rows: 10% 40% 50%;
+    padding: 30px 0;
+    grid-gap: 5px;
+    margin: auto;
+    width: 100%;
+    justify-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .game-small-icon-four {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+  }
+  .game-text-four {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    padding: 0;
+  }
+  .game-image-four {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+}
 /*# sourceMappingURL=style-index.css.map */
