--- a/landing-page/style-index.scss
+++ b/landing-page/style-index.scss
@@ -1,6 +1,6 @@
 @import "../common-css/style-common.scss";
 
-// TODO: responsivess
+
 
 body{
     padding: 0;
@@ -17,8 +17,7 @@ i{
     font-size: 35px;
 }
 a{
-    text-decoration: none;
-    
+    text-decoration: none; 
 }
 
 /* snow effect start */
@@ -363,5 +362,110 @@ a{
     width: 300px;
     grid-row: 2/3;
     grid-column: 3/4;
+}
+
+// footer css
+#footer{
+    position: fixed;
+    bottom: 0; 
+    left: 0;
+    right: 0;
+}
+
+
+// media query start
+@media only screen and (max-width: 768px) {
+    .landingsection{
+        height: auto;
+        grid-template-columns: 90%;
+        grid-template-rows: 30% 70%;
+        padding: 20px 0;
+        img{
+            grid-row:1/2 ;
+        }
+    }
+    #game{
+        height: auto;
+        grid-template-columns: 90%;
+        grid-template-rows: 10% 40% 50%;
+        padding: 30px 0;
+        grid-gap: 5px;
+        margin: auto;
+    }
+    .game-small-icon{
+        grid-column: 1/2;
+    }
+    .game-text{
+        grid-column: 1/2;
+        grid-row: 3/4;
+        padding:0;
+    }
+
+    #game-two{
+        height: auto;
+        grid-template-columns: 70%;
+        grid-template-rows: 10% 40% 50%;
+        padding: 30px 0;
+        grid-gap: 5px;
+        margin: auto;
+        width: 100%;
+        justify-items: center;
+        justify-content: center;
+    }
+    .game-small-icon-two{
+        grid-column: 1/2;
+    }
+    .game-text-two{
+        grid-column: 1/2;
+        grid-row: 3/4;
+        padding:0;
+    }
+    .game-image-two{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    #game-three{
+        height: auto;
+        grid-template-columns: 90%;
+        grid-template-rows: 10% 40% 50%;
+        padding: 30px 0;
+        grid-gap: 5px;
+        margin: auto;
+    }
+    .game-small-icon-three{
+        grid-column: 1/2;
+    }
+    .game-text-three{
+        grid-column: 1/2;
+        grid-row: 3/4;
+        padding:0;
+    }
+
+    #game-four{
+        height: auto;
+        grid-template-columns: 70%;
+        grid-template-rows: 10% 40% 50%;
+        padding: 30px 0;
+        grid-gap: 5px;
+        margin: auto;
+        width: 100%;
+        justify-items: center;
+        justify-content: center;
+    }
+    .game-small-icon-four{
+        grid-column: 1/2;
+    }
+    .game-text-four{
+        grid-column: 1/2;
+        grid-row: 3/4;
+        padding:0;
+    }
+    .game-image-four{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+
 }
 
