--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -54,6 +54,7 @@ p {
 body {
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 h1 {
@@ -66,6 +67,7 @@ p {
 
 i {
   font-size: 35px;
+  color: #E1F2F7;
 }
 
 a {
@@ -146,6 +148,7 @@ a {
   margin: auto;
   -ms-grid-columns: 80% 20%;
       grid-template-columns: 80% 20%;
+  padding-bottom: 130px;
 }
 
 .landingsection img {
@@ -157,6 +160,8 @@ a {
       align-self: center;
   -webkit-transform: rotate(10deg);
           transform: rotate(10deg);
+  -webkit-animation: shake 2s infinite ease-in-out;
+          animation: shake 2s infinite ease-in-out;
 }
 
 .landingsection-text {
@@ -225,6 +230,36 @@ a {
   }
 }
 
+@-webkit-keyframes shake {
+  0% {
+    -webkit-transform: rotate(20deg);
+            transform: rotate(20deg);
+  }
+  50% {
+    -webkit-transform: rotate(-20deg);
+            transform: rotate(-20deg);
+  }
+  100% {
+    -webkit-transform: rotate(20deg);
+            transform: rotate(20deg);
+  }
+}
+
+@keyframes shake {
+  0% {
+    -webkit-transform: rotate(20deg);
+            transform: rotate(20deg);
+  }
+  50% {
+    -webkit-transform: rotate(-20deg);
+            transform: rotate(-20deg);
+  }
+  100% {
+    -webkit-transform: rotate(20deg);
+            transform: rotate(20deg);
+  }
+}
+
 /* DRAG & DROP GAME start here */
 #game {
   height: 90vh;
@@ -233,7 +268,7 @@ a {
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
-  padding: 100px;
+  padding: 100px 0 300px 0;
   margin: auto;
   grid-gap: 20px;
   -ms-grid-columns: 40% 50% 10%;
@@ -259,10 +294,10 @@ a {
 
 .game-text {
   opacity: 0;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
-  -webkit-transition: 0.6s all ease-in-out;
-  transition: 0.6s all ease-in-out;
+  -webkit-transform: translateY(80px);
+          transform: translateY(80px);
+  -webkit-transition: 0.8s all ease-in-out;
+  transition: 0.8s all ease-in-out;
   padding-left: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
@@ -297,6 +332,8 @@ a {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  -webkit-animation: shake 2s infinite ease-in-out;
+          animation: shake 2s infinite ease-in-out;
 }
 
 .game-image {
@@ -312,18 +349,22 @@ a {
 /* running game start */
 #game-two {
   height: 100vh;
-  width: 70%;
+  width: 80%;
   background-color: #B7D4FC;
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
   padding: 15%;
   margin: auto;
-  padding: 100px;
+  padding: 100px 0 300px 0;
   -ms-grid-columns: 10% 50% 40%;
       grid-template-columns: 10% 50% 40%;
   -ms-grid-rows: 10% 90%;
       grid-template-rows: 10% 90%;
+}
+
+#game-two i {
+  color: #001B3D;
 }
 
 #game-two h3, #game-two p {
@@ -343,10 +384,10 @@ a {
 
 .game-text-two {
   opacity: 0;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
-  -webkit-transition: 0.6s all ease-in-out;
-  transition: 0.6s all ease-in-out;
+  -webkit-transform: translateY(80px);
+          transform: translateY(80px);
+  -webkit-transition: 0.8s all ease-in-out;
+  transition: 0.8s all ease-in-out;
   padding-right: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
@@ -378,6 +419,8 @@ a {
   -ms-flex-item-align: end;
       -ms-grid-row-align: end;
       align-self: end;
+  -webkit-animation: shake 2s infinite ease-in-out;
+          animation: shake 2s infinite ease-in-out;
 }
 
 .game-image-two {
@@ -393,12 +436,12 @@ a {
 /* gift generator start here */
 #game-three {
   height: 90vh;
-  width: 70%;
+  width: 80%;
   background-color: #001B3D;
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
-  padding: 100px;
+  padding: 150px 0 300px 0;
   margin: auto;
   -ms-grid-columns: 40% 50% 10%;
       grid-template-columns: 40% 50% 10%;
@@ -423,10 +466,10 @@ a {
 
 .game-text-three {
   opacity: 0;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
-  -webkit-transition: 0.6s all ease-in-out;
-  transition: 0.6s all ease-in-out;
+  -webkit-transform: translateY(80px);
+          transform: translateY(80px);
+  -webkit-transition: 0.8s all ease-in-out;
+  transition: 0.8s all ease-in-out;
   padding-left: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
@@ -461,6 +504,8 @@ a {
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3/4;
+  -webkit-animation: shake 2s infinite ease-in-out;
+          animation: shake 2s infinite ease-in-out;
 }
 
 .game-image-three {
@@ -476,18 +521,22 @@ a {
 /* bingo start */
 #game-four {
   height: 100vh;
-  width: 70%;
+  width: 80%;
   background-color: #B7D4FC;
   border-radius: 30px 30px 0 0;
   display: -ms-grid;
   display: grid;
   padding: 15%;
   margin: auto;
-  padding: 100px;
+  padding: 100px 0 300px 0;
   -ms-grid-columns: 10% 50% 40%;
       grid-template-columns: 10% 50% 40%;
   -ms-grid-rows: 10% 90%;
       grid-template-rows: 10% 90%;
+}
+
+#game-four i {
+  color: #001B3D;
 }
 
 #game-four h3, #game-four p {
@@ -507,10 +556,10 @@ a {
 
 .game-text-four {
   opacity: 0;
-  -webkit-transform: translateY(50px);
-          transform: translateY(50px);
-  -webkit-transition: 0.6s all ease-in-out;
-  transition: 0.6s all ease-in-out;
+  -webkit-transform: translateY(80px);
+          transform: translateY(80px);
+  -webkit-transition: 0.8s all ease-in-out;
+  transition: 0.8s all ease-in-out;
   padding-right: 40px;
   -ms-grid-column-align: center;
       justify-self: center;
@@ -542,6 +591,8 @@ a {
   -ms-flex-item-align: end;
       -ms-grid-row-align: end;
       align-self: end;
+  -webkit-animation: shake 2s infinite ease-in-out;
+          animation: shake 2s infinite ease-in-out;
 }
 
 .game-image-four {
@@ -559,6 +610,7 @@ a {
   bottom: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 @media only screen and (max-width: 768px) {
