--- a/landing-page/style-index.scss
+++ b/landing-page/style-index.scss
@@ -5,6 +5,7 @@
 body{
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 
 h1{
@@ -15,6 +16,7 @@ p{
 }
 i{
     font-size: 35px;
+    color: $silverblue;
 }
 a{
     text-decoration: none; 
@@ -65,6 +67,8 @@ a{
     width: 70%;
     margin: auto;
     grid-template-columns: 80% 20%;
+
+    padding-bottom: 130px;
     
 }
 
@@ -73,6 +77,7 @@ a{
     justify-self: center;
     align-self: center;
     transform: rotate(10deg);
+    animation: shake 2s infinite ease-in-out;
 }
 
 .landingsection-text{
@@ -120,7 +125,11 @@ a{
     0%   { width : 0; }
     100% { width: 100%; }
   }
-
+@keyframes shake {
+    0%{ transform: rotate(20deg);}
+    50%{ transform: rotate(-20deg);}
+    100%{ transform: rotate(20deg);}
+}
 
 /* DRAG & DROP GAME start here */
 
@@ -130,7 +139,7 @@ a{
     background-color: $darkblue;
     border-radius: 30px 30px 0 0;
     display: grid;
-    padding: 100px;
+    padding: 100px 0 300px 0;
     margin: auto;
     grid-gap:20px;
     grid-template-columns:40% 50% 10%;
@@ -152,8 +161,8 @@ a{
 
 
     opacity: 0;
-    transform: translateY(50px);
-    transition: 0.6s all ease-in-out;
+    transform: translateY(80px);
+    transition: 0.8s all ease-in-out;
     padding-left: 40px;
     justify-self: center;
     align-self: center;
@@ -175,6 +184,8 @@ a{
     width: 80px;
     align-self: end;
     grid-column: 3/4;
+    animation: shake 2s infinite ease-in-out;
+
 }
 .game-image{
     width: 300px;
@@ -188,15 +199,19 @@ a{
 
 #game-two{
     height: 100vh;
-    width: 70%;
+    width: 80%;
     background-color: $medblue;
     border-radius: 30px 30px 0 0;
     display: grid;
     padding: 15%;
     margin: auto;
-    padding: 100px;
+    padding: 100px 0 300px 0;;
     grid-template-columns:10% 50% 40%;
-    grid-template-rows: 10% 90%;   
+    grid-template-rows: 10% 90%;  
+    
+    i{
+        color: $darkblue;
+    }
 }
 #game-two h3, #game-two p{
     color: #001B3D;
@@ -212,8 +227,8 @@ a{
 .game-text-two{
 
     opacity: 0;
-    transform: translateY(50px);
-    transition: 0.6s all ease-in-out;
+    transform: translateY(80px);
+    transition: 0.8s all ease-in-out;
     padding-right: 40px;
 
     justify-self: center;
@@ -235,6 +250,8 @@ a{
 .game-small-icon-two{
     width: 80px;
     align-self: end;
+    animation: shake 2s infinite ease-in-out;
+
     
 }
 .game-image-two{
@@ -247,11 +264,11 @@ a{
 
 #game-three{
     height: 90vh;
-    width: 70%;
+    width: 80%;
     background-color: $darkblue;
     border-radius: 30px 30px 0 0;
     display: grid;
-    padding: 100px;
+    padding: 150px 0 300px 0;
     margin: auto;
     
     grid-template-columns:40% 50% 10%;
@@ -271,8 +288,8 @@ a{
 .game-text-three{
 
     opacity: 0;
-    transform: translateY(50px);
-    transition: 0.6s all ease-in-out;
+    transform: translateY(80px);
+    transition: 0.8s all ease-in-out;
     padding-left: 40px;
 
     justify-self: center;
@@ -293,6 +310,8 @@ a{
     width: 80px;
     align-self: end;
     grid-column: 3/4;
+    animation: shake 2s infinite ease-in-out;
+
 }
 .game-image-three{
     width: 300px;
@@ -308,15 +327,20 @@ a{
 
 #game-four{
     height: 100vh;
-    width: 70%;
+    width: 80%;
     background-color: $medblue;
     border-radius: 30px 30px 0 0;
     display: grid;
     padding: 15%;
     margin: auto;
-    padding: 100px;
+    padding: 100px 0 300px 0;
     grid-template-columns:10% 50% 40%;
-    grid-template-rows: 10% 90%;   
+    grid-template-rows: 10% 90%;  
+    
+    i{
+        color: $darkblue;
+        
+    }
 }
 #game-four h3, #game-four p{
     color: #001B3D;
@@ -332,8 +356,8 @@ a{
 .game-text-four{
 
     opacity: 0;
-    transform: translateY(50px);
-    transition: 0.6s all ease-in-out;
+    transform: translateY(80px);
+    transition: 0.8s all ease-in-out;
     padding-right: 40px;
 
     justify-self: center;
@@ -355,6 +379,8 @@ a{
 .game-small-icon-four{
     width: 80px;
     align-self: end;
+    animation: shake 2s infinite ease-in-out;
+
     
 }
 .game-image-four{
@@ -363,12 +389,15 @@ a{
     grid-column: 3/4;
 }
 
+
 // footer css
 #footer{
+    
     position: fixed;
     bottom: 0; 
     left: 0;
     right: 0;
+    z-index: 1;
 }
 
 
