--- a/running-game/css/running-style.css
+++ b/running-game/css/running-style.css
@@ -106,4 +106,23 @@ body {
   pointer-events: none;
   z-index: 1000;
 }
+
+.sound {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  margin-top: 2vh;
+  padding: 1vh;
+}
+
+.sound .muteButton {
+  background-image: url(../assets/volume.png);
+  background-size: cover;
+  width: 25px;
+  height: 25px;
+}
 /*# sourceMappingURL=running-style.css.map */
